--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,6 @@ universal = 1
 [upload_docs]
 repository=https://pypi.python.org/pypi
 upload_dir=build/sphinx/html
+
+[distutils]
+index-servers = minddistrict
